--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <LI class="dropdown">  
             <a href="#">Blogs</a>
             <ul class="dropdown-menu">
-                <li><a href="#">Blog post</a></li>
+                <li><a href="https://liamsi-22.github.io/Blog/">Blog post</a></li>
             </ul>
         </LI>
         <LI> <a href="#">Contact</a></LI>
