--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="overlay"> <!-- make picture opacity -->
  <div class="home-content">
 
-  <h1 class="title">wecome to website </h1>
+  <h1 class="title">hi omniya how are you doing ?!! </h1>
   <p class="home-desc">its nice to have you here in our website 
                         ,we are big team of creative services for 
                         helping people or company to make their
